--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start":"node src/app.js",
-    "dev":" nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": " nodemon src/app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "mongoose": "^8.19.2",
+    "moongoose": "^0.0.1",
     "nodemon": "^3.1.10"
   }
 }
