--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mongoose": "^8.19.2",
     "moongoose": "^0.0.1",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.96"
   }
 }
