git commit  tried deleted app

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "express": "^5.1.0",
     "mongoose": "^8.19.2",
-    "moongoose": "^0.0.1",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
-    "@types/mongoose": "^5.11.96"
+    "@types/mongoose": "^5.11.96",
+    "typescript": "^5.9.3"
   }
 }
