--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.19.2",
-    "nodemon": "^3.1.10",
+    "nodemon": "^1.0.2",
+    "socket.io": "^4.8.3",
     "validator": "^13.15.20"
   },
   "devDependencies": {
